--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>CelegansConnectome</title>
+    <title>AgingConnectome</title>
         <style>
     /* Add global font style and dark mode background */
   body {
@@ -160,8 +160,8 @@ form, .stats, .search-tips, .future {
   </head>
   <body>
     <header>
-      <h1><em>C. elegans </em>Connectome</h1>
-      <p>Welcome to the <strong><em>C. elegans</em> Connectome</strong>, your one-stop resource for discovering intricate relationships between genes, molecules, compartments, stresses, organs, and various other entities in the fascinating world of <em>C. elegans</em> biology. Our comprehensive database boasts an impressive collection of 131,891 entities and 31,740 meticulously analyzed publication abstracts. Dive into the vast expanse of knowledge by using our user-friendly search form below, and don't forget to consult our helpful stats and search tips for a smoother experience.
+      <h1>Aging Connectome</h1>
+      <p>Welcome to the <strong>Aging Connectome</strong>, your one-stop resource for discovering intricate relationships between genes, molecules, compartments, stresses, organs, and various other entities in the fascinating world of aging biology. Our comprehensive database boasts an impressive collection of 103,917 entities and 31,696 meticulously analyzed publication abstracts. Dive into the vast expanse of knowledge by using our user-friendly search form below, and don't forget to consult our helpful stats and search tips for a smoother experience.
       </p>
       <button class="help-button" onclick="window.location.href='/help'">Help</button>
     </header>
@@ -308,7 +308,7 @@ function openLightbox(imgElement) {
 	  
 	</script>
     <footer>
-  &copy; 2023 CelegansConnectome <a href="http://www.thibaultlab.com" target="_blank" rel="noopener">@ThibaultLab</a>
+  &copy; 2023 AgingConnectome <a href="http://www.thibaultlab.com" target="_blank" rel="noopener">@ThibaultLab</a>
 </footer>
   <div class="lightbox" onclick="this.style.display = 'none'">
   <img src="{{ url_for('static', filename='Capture.png') }}" alt="App Screenshot" />
