--- a/templates/index.html
+++ b/templates/index.html
@@ -269,11 +269,11 @@ form, .stats, .search-tips, .future {
   var myChart = new Chart(ctx, {
     type: 'pie',
     data: {
-      labels: ['PloS one', 'Genetics', 'PLoS genetics', 'Proceedings of the National Academy of Sciences of the United States of America', 'Current biology : CB', 'Developmental biology', 'Scientific reports', 'Development (Cambridge, England)', 'The Journal of biological chemistry', 'eLife', 'Nature communications', 'Methods in molecular biology (Clifton, N.J.)', 'Developmental cell', 'Nucleic acids research', 'Nature', 'Molecular biology of the cell', 'G3 (Bethesda, Md.)', 'Cell', 'microPublication biology', 'The Journal of cell biology', 'Other'],
+      labels: ['Aging', 'PloS one', 'The journals of gerontology. Series A, Biological sciences and medical sciences', 'Aging cell', 'Scientific reports', 'Experimental gerontology', 'International journal of molecular sciences', 'Ageing research reviews', 'Neurobiology of aging', 'International journal of environmental research and public health', 'Mechanisms of ageing and development', 'The journals of gerontology. Series B, Psychological sciences and social sciences', 'GeroScience', 'The Gerontologist', 'Biogerontology', 'Nutrients', 'Oxidative medicine and cellular longevity', 'Nature communications', "Journal of Alzheimer's disease : JAD", 'Journal of the American Geriatrics Society', 'Other'],
       datasets: [
         {
           label: "Number of papers",
-          data: [979, 716, 685, 652, 626, 472, 458, 453, 450, 449, 367, 337, 326, 310, 296, 295, 290, 288, 284, 251, 19462],
+          data: [668, 622, 526, 504, 481, 428, 386, 384, 348, 331, 287, 266, 213, 209, 207, 201, 200, 188, 181, 181, 24885],
           backgroundColor: colorPalette,
           borderColor: colorPalette,
           borderWidth: 1,
