--- a/templates/index.html
+++ b/templates/index.html
@@ -243,7 +243,7 @@ form, .stats, .search-tips, .future {
 	<div class="future">
 	  <h2>Future:</h2>
       <ul>
-        <li>Analyze and extract insights from the entirety of abstracts featured in PubMed-indexed journals using the following search criterias [aging, ageing, longevity, or lifespan] and [mammal, <i>C. elegans</i>, or homo sapiens]</li>
+        <li>Analyze and extract insights from the entirety of abstracts featured in PubMed-indexed journals using the following search criteria [aging, ageing, longevity, or lifespan] and [mammal, <i>C. elegans</i>, or homo sapiens]</li>
 		<li>Date range: 2014-now</li>
       </ul>
     </div>
