--- a/templates/index.html
+++ b/templates/index.html
@@ -233,9 +233,9 @@ form, .stats, .search-tips, .future {
       <h2>Search Tips:</h2>
       <ul>
         <li>Search by gene, molecule, compartment, stress, organ or other terms</li>
-		<li>E.g., you could search for dauer, autophagy, ER stress, longevity, or starvation</li>
+		<li>E.g., you could search for p53, FOXO, RIS, longevity, autophagy, or ER stress</li>
 		<li>The search engine is very primitive (for now), so 100% match is required</li>
-        <li>Use partial search terms to broaden your results (e.g. "him" instead of "him-14")</li>
+        <li>Use partial search terms to broaden your results (e.g. "p53" instead of "TP53BP1")</li>
         <li>Try searching for related terms or synonyms</li>
       </ul>
     </div>
